[workspace]
resolver = "2"
members = ["interface", "pinocchio/interface", "pinocchio/program", "program"]

[workspace.package]
authors = ["Trezoa-team Maintainers <maintainers@trezoa.xyz>"]
repository = "https://github.com/trezoa-program/token"
license = "Apache-2.0"
edition = "2021"

[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("trezoa"))',
    'cfg(feature, values("custom-alloc", "custom-panic", "frozen-abi", "no-entrypoint"))',
]

[workspace.metadata.spellcheck]
config = "scripts/spellcheck.toml"

[workspace.metadata.release]
pre-release-commit-message = "Publish {{crate_name}} v{{version}}"
tag-message = "Publish {{crate_name}} v{{version}}"
consolidate-commits = false

[workspace.dependencies]
mollusk-svm = "0.6.3"
mollusk-svm-fuzz-fixture = "0.6.3"
num-traits = "0.2"
pinocchio = "0.9.2"
trezoa-instruction = "3.0.0"
trezoa-program-error = "3.0.0"
trezoa-program-option = "3.0.0"
trezoa-program-pack = "3.0.0"
trezoa-pubkey = "3.0.0"
trezoa-system-interface = { version = "2.0", features = ["bincode"] }
tpl-token-interface = { path = "interface" }
