[package]
name = "tpl-token-interface"
version = "2.0.0"
description = "Trezoa Program Library Token Interface"
documentation = "https://docs.rs/tpl-token-interface"
readme = "README.md"
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
arrayref = "0.3.9"
bytemuck = "1.20.0"
num-derive = "0.4"
num_enum = "0.7.4"
num-traits = "0.2"
trezoa-instruction = "3.0.0"
trezoa-program-error = "3.0.0"
trezoa-program-option = "3.0.0"
trezoa-program-pack = "3.0.0"
trezoa-pubkey = { version = "3.0.0", features = ["bytemuck"] }
trezoa-sdk-ids = "3.0.0"
thiserror = "2.0"

[dev-dependencies]
proptest = "1.5"
strum = "0.24"
strum_macros = "0.24"

[lib]
crate-type = ["lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lints]
workspace = true

[package.metadata.trezoa]
program-id = "TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA"
