[package]
name = "pinocchio-token-program"
version = "0.0.0"
description = "A pinocchio-based Token (aka 'p-token') program"
authors = { workspace = true}
repository = { workspace = true}
license = { workspace = true}
edition = { workspace = true}
readme = "./README.md"

[lib]
crate-type = ["cdylib"]

[features]
logging = []

[dependencies]
pinocchio = { workspace = true }
pinocchio-log = { version = "0.5.1", default-features = false }
pinocchio-pubkey = "0.3"
pinocchio-token-interface = { version = "^0", path = "../interface" }

[dev-dependencies]
trezoa-feature-set = "3.0.0"
assert_matches = "1.5.0"
mollusk-svm = { workspace = true }
mollusk-svm-fuzz-fixture = { workspace = true }
num-traits = { workspace = true }
trezoa-account = "3.0.0"
trezoa-instruction = { workspace = true }
trezoa-keypair = "3.0.0"
trezoa-program-error = { workspace = true }
trezoa-program-option = { workspace = true }
trezoa-program-pack = { workspace = true }
trezoa-program-test = "3.0.0"
trezoa-pubkey = { workspace = true }
trezoa-rent = "3.0.0"
trezoa-sdk-ids = "3.0.0"
trezoa-signature = "3.0.0"
trezoa-signer = "3.0.0"
trezoa-transaction = "3.0.0"
trezoa-transaction-error = "3.0.0"
trezoa-system-interface = { workspace = true }
tpl-token-interface = { workspace = true }
tpl-token-2022-interface = "2"

[lints]
workspace = true

[package.metadata.trezoa]
program-id = "TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA"
